--- a/src/PsExport/PsExport4.csproj
+++ b/src/PsExport/PsExport4.csproj
@@ -246,6 +246,12 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CssParser\CssParser4.csproj">
+      <Project>{eb7eb8fe-6414-4c53-b5e6-54352ee25364}</Project>
+      <Name>CssParser4</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
