TD-4758 Enable hyphenation for Scripture.
Logic improved to handle all text fields
tagged with the language code. The logic has
been spead up using dictionary lookup of words.

--- a/src/PsTool/PsTool4.csproj
+++ b/src/PsTool/PsTool4.csproj
@@ -250,6 +250,7 @@
     <Compile Include="FileStreamXmlResolver.cs" />
     <Compile Include="FlexScan.cs" />
     <Compile Include="ImageMods.cs" />
+    <Compile Include="InsertHyphens.cs" />
     <Compile Include="Json.cs" />
     <Compile Include="FontInternals.cs">
     </Compile>
