Include FlexXhtmlToDoc.bat in release

--- a/DistFiles/DistFiles.csproj
+++ b/DistFiles/DistFiles.csproj
@@ -333,6 +333,7 @@
     <Copy SourceFiles="@(TheWordFiles)" DestinationFiles="@(TheWordFiles->'$(OutputPath)TheWord\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(Edition)' == 'BTE' " />
     <Copy SourceFiles="@(SwordFiles)" DestinationFiles="@(SwordFiles->'$(OutputPath)Sword\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(Edition)' == 'BTE' and $(OS) != 'Linux'" />
     <Copy SourceFiles="@(InDesignFiles)" DestinationFiles="@(InDesignFiles->'$(OutputPath)InDesignFiles\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(Edition)' != 'EPUB'" />
+	<Copy SourceFiles="@(DocConverter)" DestinationFolder="$(OutputPath)" />
     <Copy SourceFiles="@(AllTransform)" DestinationFolder="$(OutputPath)" />
     <Copy SourceFiles="@(BteTransform)" DestinationFolder="$(OutputPath)" Condition=" '$(Edition)' == 'BTE' " />
     <Copy SourceFiles="@(WordpressFiles)" DestinationFiles="@(WordpressFiles->'$(OutputPath)Wordpress\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(Status)' == 'Testing' " />
@@ -381,6 +382,7 @@
     <SwordFiles Include="Sword\**\*.*" />
     <InDesignFiles Include="InDesignFiles\**\*.*" />
     <LiftFiles Include="LiftSupport\**\*.*" />
+	<DocConverter Include="..\src\CssSimpler\FlexXhtmlToDoc.bat" />
     <AllTransform Include="AddBidi.xsl" />
     <AllTransform Include="ConvertUSXtoOSIS.xsl" />
     <AllTransform Include="addDicTocHeads.xsl" />
