NuGet restore during build

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DistFiles\packages.config" />
   <repository path="..\src\ConfigurationTool\packages.config" />
   <repository path="..\src\CssDialog\packages.config" />
   <repository path="..\src\CssParser\packages.config" />
   <repository path="..\src\CssSimpler\packages.config" />
   <repository path="..\src\DictionaryForMIDsConvert\packages.config" />
   <repository path="..\src\GoBibleConvert\packages.config" />
+  <repository path="..\src\Html5Convert\packages.config" />
   <repository path="..\src\PathwayB\packages.config" />
+  <repository path="..\src\PathwayExport\packages.config" />
   <repository path="..\src\PdfConvert\packages.config" />
   <repository path="..\src\PsTool\packages.config" />
   <repository path="..\src\SwordConvert\packages.config" />
