Update nuget to work with vs 2013 or vs 2015 by using old version of Newtonsoft.Json

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,11 +6,14 @@
   <repository path="..\src\CssParser\packages.config" />
   <repository path="..\src\CssSimpler\packages.config" />
   <repository path="..\src\DictionaryForMIDsConvert\packages.config" />
+  <repository path="..\src\DownloadInfoTemplate\packages.config" />
   <repository path="..\src\GoBibleConvert\packages.config" />
   <repository path="..\src\Html5Convert\packages.config" />
+  <repository path="..\src\ParatextSupport\packages.config" />
   <repository path="..\src\PathwayB\packages.config" />
   <repository path="..\src\PathwayExport\packages.config" />
   <repository path="..\src\PdfConvert\packages.config" />
+  <repository path="..\src\PsExport\packages.config" />
   <repository path="..\src\PsTool\packages.config" />
   <repository path="..\src\SwordConvert\packages.config" />
   <repository path="..\src\Test\packages.config" />
