--- a/src/PsExport/PsExport4.csproj
+++ b/src/PsExport/PsExport4.csproj
@@ -215,14 +215,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\output\Debug\CssParser.dll</HintPath>
     </Reference>
+    <Reference Include="PsTool, Version=1.15.7.5693, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\output\Debug\PsTool.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="L10NSharp">
       <HintPath>..\..\lib\L10NSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="PsTool">
-      <HintPath>..\..\output\Release\PsTool.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
