--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,27 @@
+# Copyright (c) 2017 SIL International
+# This software is licensed under the MIT license (http://opensource.org/licenses/MIT)
 
-# EditorConfig is awesome: http://EditorConfig.org
-
-# top-most EditorConfig file
 root = true
 
-# Tab indentation
+# Defaults
 [*]
 indent_style = tab
-indent_size = 4
+indent_size = tab
+tab_width = 4
+charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = false
+max_line_length = 98
 
-# The indent size used in the `package.json` file cannot be changed
-# https://github.com/npm/npm/pull/3180#issuecomment-16336516
-[{.travis.yml,npm-shrinkwrap.json,package.json}]
+[*.cs]
+indent_style = tab
+tab_width = 4
+
+# Settings Visual Studio uses for generated files
+[*.{csproj,resx,settings,vcxproj*,vdproj,xml}]
 indent_style = space
 indent_size = 2
+
+# Generated file
+[*.sln]
+end_of_line = crlf
