TD-4516 TD-4511 Use Paragraph styles for Scripture
Move language tag to body
base styles on the body tag

--- a/src/OpenOfficeConvert/OpenOfficeConvert.csproj
+++ b/src/OpenOfficeConvert/OpenOfficeConvert.csproj
@@ -240,6 +240,7 @@
     </Compile>
     <Compile Include="OOMetaXML.cs" />
     <Compile Include="OOExportOpenOffice.cs" />
+    <Compile Include="OORootStyle.cs" />
     <Compile Include="OOStyleBase.cs" />
     <Compile Include="OOMapProperty.cs" />
     <Compile Include="OOStyles.cs" />
