--- a/src/ParatextSupport/ParatextSupport4.csproj
+++ b/src/ParatextSupport/ParatextSupport4.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8FD33078-DF28-44DA-BE05-C9981EF9A214}</ProjectGuid>
+    <ProjectGuid>{E9E86AC5-EC9E-40C4-A386-64A77C48034B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ParatextSupport</RootNamespace>
@@ -212,12 +212,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="L10NSharp, Version=2.0.67.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\L10NSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="L10NSharp">
-      <HintPath>..\..\lib\L10NSharp.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ParatextPathwayLink.cs" />
@@ -269,19 +270,19 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CssDialog\CssDialog4.csproj">
-      <Project>{749d4fcd-5100-46c8-ae73-50873cb5cec0}</Project>
+      <Project>{1a58ecc5-75fe-4fe2-b133-8605b382b7c0}</Project>
       <Name>CssDialog4</Name>
     </ProjectReference>
     <ProjectReference Include="..\CssParser\CssParser4.csproj">
-      <Project>{eb7eb8fe-6414-4c53-b5e6-54352ee25364}</Project>
+      <Project>{b58fd9ba-1783-43f2-86d1-d79e1eacc365}</Project>
       <Name>CssParser4</Name>
     </ProjectReference>
     <ProjectReference Include="..\PsExport\PsExport4.csproj">
-      <Project>{d6a2bf1c-774e-4118-830f-23d60de0a9a9}</Project>
+      <Project>{dcd48287-7f36-4dbb-94cf-4ff617bf1f78}</Project>
       <Name>PsExport4</Name>
     </ProjectReference>
     <ProjectReference Include="..\PsTool\PsTool4.csproj">
-      <Project>{422c5127-260d-4f16-b476-33aa38dbf919}</Project>
+      <Project>{448f846f-ce23-462c-bf7e-827875a36f82}</Project>
       <Name>PsTool4</Name>
     </ProjectReference>
   </ItemGroup>
